# NanoSig

./: CITATION.cff  README.md  accessions.tsv  environment.yml  pyproject.toml
.github/workflows/: ci.yml
examples/: README.md  generate_toy_data.py
nanosig/: cli.py
tests/: test_cli.py
